--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "typo3conf/ext/news"]
 	path = typo3conf/ext/news
 	url = git://git.typo3.org/TYPO3CMS/Extensions/news.git
+[submodule "typo3conf/ext/theme_t3kit"]
+	path = typo3conf/ext/theme_t3kit
+	url = git@github.com:t3kit/theme_t3kit.git
