--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "typo3conf/ext/solr"]
 	path = typo3conf/ext/solr
 	url = https://github.com/TYPO3-Solr/ext-solr.git
+[submodule "typo3conf/ext/seo_basics"]
+	path = typo3conf/ext/seo_basics
+	url = git@github.com:pixelant/t3ext-seo_basics.git
