--- a/.gitmodules
+++ b/.gitmodules
@@ -1,48 +1,48 @@
 [submodule "TYPO3.CMS"]
 	path = TYPO3.CMS
-	url = git://git.typo3.org/Packages/TYPO3.CMS.git
+	url = https://git.typo3.org/Packages/TYPO3.CMS.git
 [submodule "typo3conf/ext/t3kit_extension_tools"]
 	path = typo3conf/ext/t3kit_extension_tools
-	url = git@github.com:t3kit/t3kit_extension_tools.git
+	url = https://github.com/t3kit/t3kit_extension_tools.git
 [submodule "typo3conf/ext/dyncss"]
 	path = typo3conf/ext/dyncss
-	url = git@github.com:kaystrobach/TYPO3.dyncss.git
+	url = https://github.com/kaystrobach/TYPO3.dyncss.git
 [submodule "typo3conf/ext/dyncss_less"]
 	path = typo3conf/ext/dyncss_less
-	url = git@github.com:kaystrobach/TYPO3.dyncss_less.git
+	url = https://github.com/kaystrobach/TYPO3.dyncss_less.git
 [submodule "typo3conf/ext/yaml_parser"]
 	path = typo3conf/ext/yaml_parser
-	url = git@github.com:kaystrobach/TYPO3.yaml_parser.git
+	url = https://github.com/kaystrobach/TYPO3.yaml_parser.git
 [submodule "typo3conf/ext/themes"]
 	path = typo3conf/ext/themes
-	url = git@github.com:typo3-themes/themes.git
+	url = https://github.com/typo3-themes/themes.git
 [submodule "typo3conf/ext/static_info_tables"]
 	path = typo3conf/ext/static_info_tables
-	url = git://git.typo3.org/TYPO3CMS/Extensions/static_info_tables.git
+	url = https://git.typo3.org/TYPO3CMS/Extensions/static_info_tables.git
 [submodule "typo3conf/ext/news"]
 	path = typo3conf/ext/news
-	url = git://git.typo3.org/TYPO3CMS/Extensions/news.git
+	url = https://git.typo3.org/TYPO3CMS/Extensions/news.git
 [submodule "typo3conf/ext/theme_t3kit"]
 	path = typo3conf/ext/theme_t3kit
-	url = git@github.com:t3kit/theme_t3kit.git
+	url = https://github.com/t3kit/theme_t3kit.git
 [submodule "typo3conf/ext/pxa_newsletter_subscription"]
 	path = typo3conf/ext/pxa_newsletter_subscription
-	url = git@bitbucket.org:pixelant/pxa_newsletter_subscription.git
+	url = https://bitbucket.org/pixelant/pxa_newsletter_subscription.git
 [submodule "typo3conf/ext/realurl"]
 	path = typo3conf/ext/realurl
 	url = https://git.typo3.org/TYPO3CMS/Extensions/realurl.git
 [submodule "typo3conf/ext/go_maps_ext"]
 	path = typo3conf/ext/go_maps_ext
-	url = git@github.com:mhirdes/go_maps_ext.git
+	url = https://github.com/mhirdes/go_maps_ext.git
 [submodule "typo3conf/ext/gridelements"]
 	path = typo3conf/ext/gridelements
-	url = git@github.com:TYPO3-extensions/gridelements.git
+	url = https://github.com/TYPO3-extensions/gridelements.git
 [submodule "typo3conf/ext/solr"]
 	path = typo3conf/ext/solr
 	url = https://github.com/TYPO3-Solr/ext-solr.git
 [submodule "typo3conf/ext/seo_basics"]
 	path = typo3conf/ext/seo_basics
-	url = git@github.com:pixelant/t3ext-seo_basics.git
+	url = https://github.com/pixelant/t3ext-seo_basics.git
 [submodule "typo3conf/ext/realurl_404_multilingual"]
 	path = typo3conf/ext/realurl_404_multilingual
-	url = git@github.com:pixelant/realurl_404_multilingual.git
+	url = https://github.com/pixelant/realurl_404_multilingual.git
