[FEATURE] add new TYPO3 Theme Blue Mountain 0.0.1 alpha

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "typo3conf/ext/realurl_404_multilingual"]
 	path = typo3conf/ext/realurl_404_multilingual
 	url = git@github.com:pixelant/realurl_404_multilingual.git
+[submodule "typo3conf/ext/theme_t3kit_bluemountain"]
+	path = typo3conf/ext/theme_t3kit_bluemountain
+	url = git@github.com:t3kit/theme_t3kit_bluemountain.git
