[!!!][BUGFIX] Language menu wrong linking Realurl upgrade from 1.13 to 2.0. Need to drop table tx_realurl_pathcache and then update the database

--- a/.gitmodules
+++ b/.gitmodules
@@ -30,7 +30,7 @@
 	url = git@bitbucket.org:pixelant/pxa_newsletter_subscription.git
 [submodule "typo3conf/ext/realurl"]
 	path = typo3conf/ext/realurl
-	url = https://git.typo3.org/TYPO3CMS/Extensions/realurl.git
+	url = git@github.com:dmitryd/typo3-realurl.git
 [submodule "typo3conf/ext/go_maps_ext"]
 	path = typo3conf/ext/go_maps_ext
 	url = git@github.com:mhirdes/go_maps_ext.git
