--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "typo3conf/ext/pxa_form_enhancement"]
 	path = typo3conf/ext/pxa_form_enhancement
 	url = git@github.com:pixelant/pxa_form_enhancement.git
+[submodule "typo3conf/ext/pxa_cookie_bar"]
+	path = typo3conf/ext/pxa_cookie_bar
+	url = git@github.com:pixelant/pxa_cookie_bar.git
