--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,13 @@
     "clickstorm/go_maps_ext": "2.2.0",
     "typo3-ter/news": "5.3.2",
     "typo3-ter/static-info-tables": "^6.4",
-    "pixelant/pxa-cookie-bar": "1.0.4"
+    "pixelant/pxa-cookie-bar": "1.0.4",
+
+    "behat/behat": "~3.3.0",
+    "behat/mink-extension": "~2.2",
+    "behat/mink-goutte-driver": "~1.2.1",
+    "behat/mink-selenium2-driver": "~1.3.1",
+    "guzzlehttp/guzzle": "~6.2.0"
   },
   "require-dev": {
   },
