--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,6 @@
     },
     {
       "type": "git",
-      "url": "https://github.com/t3kit/gridelements"
-    },
-    {
-      "type": "git",
       "url": "https://github.com/b13/t3ext-seo_basics"
     },
     {
@@ -70,22 +66,20 @@
   "minimum-stability": "dev",
   "require": {
     "php": "^7.0",
-    "typo3/cms": "8.5",
+    "typo3/cms": "8.6",
     "typo3-ter/realurl": "^2.1",
     "b13/seo_basics": "0.9.6",
-    "t3kit/theme-t3kit": "dev-typo3_8.x_compatibility",
     "typo3-themes/themes": "dev-typo3_8_compatibility",
-    "t3kit/t3kit-extension-tools": "dev-typo3_8.x_compatibility",
-    "gridelementsteam/gridelements": "dev-typo3_8.x_compatibility",
+    "gridelementsteam/gridelements": "dev-master",
     "apache-solr-for-typo3/solr": "dev-master",
     "pixelant/pxa-newsletter-subscription": "dev-master",
     "kaystrobach/dyncss": "dev-typo3_8.x_compatibility",
-    "typo3-ter/dyncss-less": ">=0.7.6 <=0.7.99",
+    "typo3-ter/dyncss-less": ">=0.7.7 <=0.7.99",
     "clickstorm/go_maps_ext": "2.2.0",
     "typo3-ter/news": "5.3.2",
     "typo3-ter/static-info-tables": "^6.4",
     "pixelant/pxa-cookie-bar": "1.0.4"
-  },
+      },
   "require-dev": {
     "t3kit/db": "dev-master"
   },
