--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,17 @@ jobs:
       - image: t3kit/ubuntu16-php7-apache:0.0.1
     steps:
       - checkout
-      - run: sh /docker_conf/run.sh
-      - run: echo "hello world"
+      - run:
+          name: Install Composer
+          command: |
+            php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
+            php -r "copy('https://composer.github.io/installer.sig', 'composer-setup.sig');" && \
+            php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('composer-setup.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" && \
+            php composer-setup.php && \
+            php -r "unlink('composer-setup.php');"
+      - run:
+          name: Install Project Dependencies
+          command: php composer.phar install
+      #- run:
+      #    name: Install Project Dependencies
+      #    command: cd /var/www && sh /docker_conf/run.sh
