--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,19 @@ version: 2
 jobs:
   build:
     working_directory: /var/www/html
-    executor: docker
     docker:
       - image: t3kit/ubuntu16-php7-apache:0.0.1
     steps:
       - checkout
       - setup_docker_engine
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       - run:
           name: Install Composer
           command: |
