--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,18 +4,9 @@ jobs:
     working_directory: /var/www/html
     docker:
       - image: t3kit/ubuntu16-php7-apache:0.0.1
-      - container_name: web
     steps:
       - checkout
       - setup_docker_engine
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
       - run:
           name: Install Composer
           command: |
@@ -30,7 +21,7 @@ jobs:
       - run:
           name: Install t3kit database
           command: |
-            docker exec -it web /t3kit_db/setupdb.sh
+            docker run vendor/t3kit/db/setupdb.sh
       #- run:
       #    name: Install Project Dependencies
       #    command: cd /var/www && sh /docker_conf/run.sh
