--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,18 +18,19 @@ jobs:
       - run:
           name: Install Project Dependencies
           command: php composer.phar install
-      - run:
-          name: Install Docker client
-          command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
-      - run:
-          name: Install t3kit database
-          command: |
-            docker exec -it $DOCKER_MACHINE_NAME vendor/t3kit/db/setupdb.sh
       #- run:
-      #    name: Install Project Dependencies
-      #    command: cd /var/www && sh /docker_conf/run.sh
+      #    name: Install Docker client
+      #    command: |
+      #      set -x
+      #      VER="17.03.0-ce"
+      #      curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+      #      tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+      #      mv /tmp/docker/* /usr/bin
+      #- run:
+      #    name: Install t3kit database
+      #    command: |
+      #      docker exec -it $DOCKER_MACHINE_NAME vendor/t3kit/db/setupdb.sh
+      - run:
+          name: Install Project Dependencies
+          shell: /bin/sh
+          command: /docker_conf/run.sh
