--- a/composer.json
+++ b/composer.json
@@ -81,9 +81,14 @@
     "typo3-ter/news": "5.3.2",
     "typo3-ter/static-info-tables": "^6.4",
     "pixelant/pxa-cookie-bar": "1.0.4"
-      },
+  },
   "require-dev": {
-    "t3kit/db": "dev-master"
+    "t3kit/db": "dev-master",
+    "behat/behat": "~3.3.0",
+    "behat/mink-extension": "~2.2",
+    "behat/mink-goutte-driver": "~1.2.1",
+    "behat/mink-selenium2-driver": "~1.3.1",
+    "guzzlehttp/guzzle": "~6.2.0"
   },
   "extra": {
     "typo3/cms": {
