--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: t3kit/ubuntu16-php7-apache:0.0.1
     steps:
       - checkout
-      - setup_docker_engine
+      #- setup_docker_engine
       - run:
           name: Install Composer
           command: |
@@ -17,7 +17,7 @@ jobs:
             php -r "unlink('composer-setup.php');"
       - run:
           name: Install Project Dependencies
-          command: php composer.phar install
+          command: php composer.phar install --no-dev
       #- run:
       #    name: Install Docker client
       #    command: |
@@ -26,7 +26,11 @@ jobs:
       #      curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
       #      tar -xz -C /tmp -f /tmp/docker-$VER.tgz
       #      mv /tmp/docker/* /usr/bin
-      #- run:
-      #    name: Install t3kit database
-      #    command: |
-      #      docker exec -it $DOCKER_MACHINE_NAME vendor/t3kit/db/setupdb.sh
+      - run:
+          name: Install t3kit database
+          command: |
+            docker ps
+      - run:
+          name: Install t3kit database
+          command: |
+            docker exec -it $DOCKER_MACHINE_NAME vendor/t3kit/db/setupdb.sh
