--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,11 @@ jobs:
       #      curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
       #      tar -xz -C /tmp -f /tmp/docker-$VER.tgz
       #      mv /tmp/docker/* /usr/bin
-      - run:
-          name: Install t3kit database
-          command: |
-            docker ps
-      - run:
-          name: Install t3kit database
-          command: |
-            docker exec -it $DOCKER_MACHINE_NAME vendor/t3kit/db/setupdb.sh
+      #- run:
+      #    name: Install t3kit database
+      #    command: |
+      #      docker ps
+      #- run:
+      #    name: Install t3kit database
+      #    command: |
+      #      docker exec -it $DOCKER_MACHINE_NAME vendor/t3kit/db/setupdb.sh
