--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     {
       "type": "git",
-      "url": "https://github.com/t3kit/theme_t3kit.git"
+      "url": "https://github.com/t3kit/theme_t3kit"
     },
     {
       "type": "git",
@@ -56,7 +56,7 @@
     },
     {
       "type": "git",
-      "url": "https://github.com/kaystrobach/TYPO3.dyncss"
+      "url": "https://github.com/t3kit/gridelements"
     },
     {
       "type": "git",
@@ -72,11 +72,11 @@
     "typo3-themes/themes": "dev-typo3_8_compatibility",
     "t3kit/t3kit-extension-tools": "dev-typo3_8.x_compatibility",
     "t3kit/theme-t3kit": "dev-master",
-    "gridelementsteam/gridelements": "dev-master",
+    "gridelementsteam/gridelements": "dev-typo3_8.x_compatibility",
     "apache-solr-for-typo3/solr": "dev-master",
     "pixelant/pxa-newsletter-subscription": "dev-master",
-    "kaystrobach/dyncss": "dev-master",
-    "typo3-ter/dyncss-less": ">=0.7.7 <=0.7.99",
+    "typo3-ter/dyncss": "0.8.0",
+    "typo3-ter/dyncss-less": ">=0.7.8 <=0.7.99",
     "clickstorm/go_maps_ext": "2.2.0",
     "typo3-ter/news": "5.3.2",
     "typo3-ter/static-info-tables": "^6.4",
