--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ composer.lock
 solrdata/*
 # Keep the actual folder
 !solrdata/.gitkeep
+
+# Docker Sync https://github.com/EugenMayer/docker-sync
+._.DS_Store
+.docker-sync/
