--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - MYSQL_USER=t3kit
       - MYSQL_PASSWORD=t3kit1234
     restart: always
-
+    ports:
+      - "3307:3306"
   web:
     container_name: web
     image: t3kit/ubuntu16-php7-apache:0.0.1
@@ -26,12 +27,14 @@ services:
       - .:/var/www/html
     restart: always
     command: "sh /docker_conf/run.sh"
-
+    environment:
+      - USERID=1001
+      - GROUPID=1001
   t3kit_solr:
     container_name: t3kit_solr
     image: typo3solr/ext-solr:6.0.0
     ports:
       - "8983:8983"
     volumes:
-      - $PWD/solrdata:/opt/solr/server/solr/data/
+      - ./solrdata:/opt/solr/server/solr/data/
     restart: always
