[TASK] add mailhog/mailhog to docker and set TYPO3 to use it in Development/Docker context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,9 @@ services:
     volumes:
       - ./solrdata:/opt/solr/server/solr/data/
     restart: always
+  mailhog:
+    container_name: t3kit_mailhog
+    image: mailhog/mailhog
+    ports:
+      - "8025:8025"
+
