--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,6 @@
     },
     {
       "type": "git",
-      "url": "https://github.com/typo3-themes/themes"
-    },
-    {
-      "type": "git",
       "url": "https://github.com/svewap/realurl_404_multilingual"
     },
     {
@@ -45,29 +41,11 @@
     {
       "type": "git",
       "url": "https://github.com/pixelant/pxa_cookie_bar"
-    },
-    {
-      "type": "git",
-      "url": "https://github.com/TYPO3-Solr/ext-solr"
     }
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "^7.0",
-    "typo3/cms": "8.7.1",
-    "typo3-ter/realurl": "2.2.0",
-    "typo3-themes/themes": "dev-8-0",
-    "t3kit/theme-t3kit": "dev-master",
-    "gridelementsteam/gridelements": "dev-master",
-    "apache-solr-for-typo3/solr": "6.1.0",
-    "pixelant/pxa-newsletter-subscription": "4.1.0",
-    "typo3-ter/dyncss-less": "0.7.9",
-    "clickstorm/go_maps_ext": "2.2.0",
-    "b13/seo_basics": "0.9.6",
-    "typo3-ter/news": "5.3.3",
-    "pixelant/pxa-form-enhancement": "3.0.0",
-    "pixelant/pxa-cookie-bar": "1.0.7",
-    "wapplersystems/realurl-404-multilingual": "dev-master"
+    "t3kit/theme-t3kit": "dev-master"
   },
   "require-dev": {
     "t3kit/db": "dev-master",
