--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
   "extra": {
     "typo3/cms": {
       "cms-package-dir": "{$vendor-dir}/typo3/cms",
-      "web-dir": "."
+      "web-dir": "web"
     }
   }
 }
