--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,10 @@
     {
       "type": "git",
       "url": "https://github.com/pixelant/pxa_cookie_bar"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/t3kit/TYPO3.UrlForwarding"
     }
   ],
   "minimum-stability": "dev",
@@ -53,7 +57,8 @@
     "behat/mink-extension": "~2.2",
     "behat/mink-goutte-driver": "~1.2.1",
     "behat/mink-selenium2-driver": "~1.3.1",
-    "guzzlehttp/guzzle": "~6.2.0"
+    "guzzlehttp/guzzle": "~6.2.0",
+    "patrickbroens/url-forwarding": "~1.3.0"
   },
   "extra": {
     "typo3/cms": {
