--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "t3kit/theme-t3kit": "dev-master"
+    "t3kit/theme-t3kit": "dev-master",
+    "patrickbroens/url-forwarding": "~1.3.0"
   },
   "require-dev": {
     "t3kit/db": "dev-master",
@@ -57,8 +58,7 @@
     "behat/mink-extension": "~2.2",
     "behat/mink-goutte-driver": "~1.2.1",
     "behat/mink-selenium2-driver": "~1.3.1",
-    "guzzlehttp/guzzle": "~6.2.0",
-    "patrickbroens/url-forwarding": "~1.3.0"
+    "guzzlehttp/guzzle": "~6.2.0"
   },
   "extra": {
     "typo3/cms": {
