--- a/composer.json
+++ b/composer.json
@@ -33,22 +33,14 @@
     {
       "type": "git",
       "url": "https://github.com/pixelant/pxa_newsletter_subscription"
-    },
-    {
-      "type": "git",
-      "url": "https://github.com/pixelant/pxa_form_enhancement"
-    },
-    {
-      "type": "git",
-      "url": "https://github.com/pixelant/pxa_cookie_bar"
     }
   ],
   "minimum-stability": "dev",
   "require": {
-    "t3kit/theme-t3kit": "dev-master"
+    "t3kit/theme-t3kit": "~2.0.0"
   },
   "require-dev": {
-    "t3kit/db": "dev-master",
+    "t3kit/db": "~2.0.0",
     "behat/behat": "~3.3.0",
     "behat/mink-extension": "~2.2",
     "behat/mink-goutte-driver": "~1.2.1",
