--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -1,11 +1,10 @@
 version: "2"
 
 options:
-  compose-file-path: 'docker-compose.mac.yml'
   verbose: true
 
 syncs:
   t3kit-sync:
     src: '.'
     sync_userid: '501'
-    sync_excludes: ['uploads', 'typo3temp']
+    sync_excludes: ['uploads', 'typo3temp', '.git', 'node_modules']
