--- a/composer.json
+++ b/composer.json
@@ -36,13 +36,13 @@
     },
     {
       "type": "git",
-      "url": "https://github.com/t3kit/TYPO3.UrlForwarding"
+      "url": "https://github.com/patrickbroens/TYPO3.UrlForwarding.git"
     }
   ],
   "minimum-stability": "dev",
   "require": {
     "t3kit/theme-t3kit": "~2.0.0",
-    "patrickbroens/url-forwarding": "~1.3.0"
+    "patrickbroens/url-forwarding": "~1.2.0"
   },
   "require-dev": {
     "t3kit/db": "~2.0.0",
