[TASK] added url-forwarding (#137)
* [TASK] added url-forwarding

* [TASK] moved url-forwarding under require

* Update composer.json

* [FIX] Changed repo for UrlForwarding

Changed repo for UrlForwarding because author removed limitation for typo3 version in his original repo.

--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,16 @@
     {
       "type": "git",
       "url": "https://github.com/pixelant/pxa_newsletter_subscription"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/patrickbroens/TYPO3.UrlForwarding.git"
     }
   ],
   "minimum-stability": "dev",
   "require": {
-    "t3kit/theme-t3kit": "~2.0.0"
+    "t3kit/theme-t3kit": "~2.0.0",
+    "patrickbroens/url-forwarding": "~1.2.0"
   },
   "require-dev": {
     "t3kit/db": "~2.0.0",
