--- a/composer.json
+++ b/composer.json
@@ -37,12 +37,17 @@
     {
       "type": "git",
       "url": "https://github.com/patrickbroens/TYPO3.UrlForwarding.git"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/pixelant/dashboard"
     }
   ],
   "minimum-stability": "dev",
   "require": {
     "t3kit/theme-t3kit": "~2.1.1",
-    "patrickbroens/url-forwarding": "~1.2.0"
+    "patrickbroens/url-forwarding": "~1.2.0",
+    "pixelant/dashboard": "~8.0.0"
   },
   "require-dev": {
     "t3kit/db": "~2.2.0",
