--- a/composer.json
+++ b/composer.json
@@ -50,12 +50,16 @@
     "behat/mink-extension": "~2.2",
     "behat/mink-goutte-driver": "~1.2.1",
     "behat/mink-selenium2-driver": "~1.3.1",
-    "guzzlehttp/guzzle": "~6.2.0"
+    "guzzlehttp/guzzle": "~6.2.0",
+    "helhum/typo3-console": "4.6.1"
   },
   "extra": {
     "typo3/cms": {
       "cms-package-dir": "{$vendor-dir}/typo3/cms",
       "web-dir": "web"
+    },
+    "helhum/typo3-console": {
+      "install-extension-dummy": "0"
     }
   }
 }
