[!!!][TASK] Add pixelant/deployment to repo
Installation:

* Run compose install

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,10 @@
     {
       "type": "git",
       "url": "https://github.com/patrickbroens/TYPO3.UrlForwarding.git"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/pixelant/deployment"
     }
   ],
   "minimum-stability": "dev",
@@ -51,7 +55,8 @@
     "behat/mink-goutte-driver": "~1.2.1",
     "behat/mink-selenium2-driver": "~1.3.1",
     "guzzlehttp/guzzle": "~6.2.0",
-    "helhum/typo3-console": "4.6.1"
+    "helhum/typo3-console": "4.6.1",
+    "pixelant/deployment": "dev-master"
   },
   "extra": {
     "typo3/cms": {
